--- a/package.json
+++ b/package.json
@@ -8,11 +8,17 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.35",
+    "@fortawesome/react-native-fontawesome": "^0.2.6",
+    "@react-native-firebase/app": "^11.3.0",
+    "@react-native-firebase/auth": "^11.3.0",
     "expo": "~41.0.0",
     "expo-status-bar": "~1.0.4",
+    "firebase": "^8.4.1",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-41.0.0.tar.gz",
+    "react-native-svg": "^12.1.1",
     "react-native-web": "~0.13.12"
   },
   "devDependencies": {
